--- a/style.css
+++ b/style.css
@@ -1,4 +1,20 @@
 body{
-    background-color: blue;
+    background-image: url("https://images.pexels.com/photos/747964/pexels-photo-747964.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    background-repeat: no-repeat;
+    background-size: cover;
     text-align: center;
+}
+
+ul{
+    list-style-type: none;
+    margin: auto;
+    padding: 0;
+}
+li{
+    text-align: center;
+    display: inline;
+}
+li a{
+    font-size: 25px;
+    padding: 15px;
 }
