--- a/style.css
+++ b/style.css
@@ -1,17 +1,23 @@
 html, body{margin:0; padding:0;}
 
+.title{
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
 #name{
     text-align: center;
+    font-size:40px;
 }
 div{
-    height: 970px;
+    height: 100vh;
     width: 100%;
     position: relative;
-    top:0;
+    top:0px;
     left:0;
+    padding:1px
 }
 .page1{
-    background-color: blue;
+    background-image: url(https://wallpaperaccess.com/full/378016.jpg);
+
 }
 .page2{
     background-color: green;
