--- a/style.css
+++ b/style.css
@@ -1,27 +1,30 @@
 html, body{margin:0; padding:0;}
-
-.title{
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
-}
-#name{
-    text-align: center;
-    font-size:40px;
-}
 div{
     height: 100vh;
     width: 100%;
     position: relative;
     top:0px;
     left:0;
-    padding:1px
+    padding:1px;
 }
 .page1{
-    background-image: url(https://wallpaperaccess.com/full/378016.jpg);
-
+    
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .page2{
     background-color: green;
 }
 .page3{
     background-color: brown;
+}
+.title{
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
+#page1Main{
+    text-align: center;
+    font-size:40px;
+    color:grey;
+    text-decoration: underline;
+    top: 25vh;
 }
