--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ div{
     padding:1px;
 }
 .page1{
-    
+    background-image:url(./images/Website_Background.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
 }
