--- a/style.css
+++ b/style.css
@@ -32,14 +32,17 @@ div{
     top: 25vh;
     text-decoration:underline;
 }
-#gitHubIcon{
+#linkBar{
     z-index: 100;
-    background-color: pink;
+    background-color: #41486e;
     top: -100.5vh;
     left: 0;
-    height: 40px;
+    height: 50px;
 }
-#gitHubIcon, a{
-    text-align: right;
-    padding: 5px;
+#gitHubLogo{
+    position: relative;
+    top: 0;
+    left:97%;
+    height: 50px;
+    width: 50px;
 }
